# muchine

./: Codinghub 다른 지원자 Tfidf.ipynb  db.sqlite3  learnmining.ipynb  manage.py  minings.py  pyproject.toml
board/: models.py
board/migrations/: 0001_initial.py
textmining/: asgi.py  settings.py  urls.py  wsgi.py
