[tool.poetry]
name = "textmining"
version = "0.1.0"
description = ""
authors = ["sds7629 <sds7629@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
ipykernel = "^6.27.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
